2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/numbers.txi: Add sizemax function to documentation.
	* interpreter/doccheck/mk_undocumented_list: Add ifelse to functions
	not requiring documentation.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/image.txi: Add whitebg function to documentation.
	* interpreter/plot.txi: Add reset function to documentation. 

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/linalg.txi: Add rsf2csf to documentation.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/geometry.txi: Add trisurf to documentation.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* interpreter/arith.txi (Rational Approximations): Move here.
	Update menu.
	* interpreter/io.txi: From here.
	Update menu.
	* interpreter/octave.texi (Top): Update detailed menu.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* interpreter/mk_doc_cache.m, interpreter/mkoctfile.1,
	interpreter/munge-texi.cc, interpreter/doccheck/mk_undocumented_list:
	Strip trailing whitespace.

2011-01-26  Rik  <octave@nomad.inbox5.com>

	* interpreter/basics.txi: Use @code to eliminate extra single quotes
	in index.
	* interpreter/container.txi: Add @opindex citations for '.', '{' and
	'}'.

2011-01-26  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave-bug.1: Delete obsolete man page
	* interpreter/Makefile.am: Stop distributing octave-bug.1 man page.

2011-01-26  Olaf Till <olaf.till@uni-jena.de>

	* interpreter/package.txi: Document variables MKOCTFILE,
	OCTAVE_CONFIG, and OCTAVE exported by pkg for configure and make.

2011-01-25  Rik  <octave@nomad.inbox5.com>

	* Makefile.am: Remove pass-through rules for AUTHORS, BUGS, and
	INSTALL.OCTAVE which are no longer required.

2011-01-24  Rik  <octave@nomad.inbox5.com>

	* Makefile.am, interpreter/Makefile.am: Add rule to build AUTHORS file.
	* interpreter/preface.txi: Add @ifclear rule to build AUTHORS file.

2011-01-23  Rik  <octave@nomad.inbox5.com>
